tests/baselines/reference/importEmptyFromModuleNotExisted.errors.txt
tests/cases/conformance/es6/modules/importEmptyFromModuleNotExisted.ts(1,16): error TS2792: Cannot find module 'module-not-existed'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== tests/cases/conformance/es6/modules/importEmptyFromModuleNotExisted.ts (1 errors) ====
    import {} from 'module-not-existed'
                   ~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'module-not-existed'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    